<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.sebastian.loggin.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/registro"
            android:textColor="@color/purple"
            android:textSize="25sp"
            android:textStyle="bold"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/nombre"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="italic|bold" />

            <EditText
                android:id="@+id/eNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:hint="@string/nombre"
                android:textColor="@color/red"
                android:textSize="20sp"
                android:textStyle="normal" />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/loggin"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="italic|bold" />

            <EditText
                android:id="@+id/eLoggin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:hint="@string/loggin"
                android:textColor="@color/red"
                android:textSize="20sp"
                android:textStyle="normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="italic|bold"

                />

            <EditText
                android:id="@+id/ePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:hint="@string/password"
                android:textColor="@color/red"
                android:textSize="20sp"
                android:textStyle="normal"
                android:inputType="textPassword"/>
        </LinearLayout>

         <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/confirmar"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="italic|bold" />

        <EditText
            android:id="@+id/eCPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:hint="@string/confirmar"
            android:textColor="@color/red"
            android:textSize="20sp"
            android:textStyle="normal"
            android:inputType="textPassword"/>
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/correo"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="italic|bold"

                />

            <EditText
                android:id="@+id/eCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:hint="@string/correo"
                android:inputType="textEmailAddress"
                android:textColor="@color/red"
                android:textSize="20sp"
                android:textStyle="normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/telefono"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="italic|bold"

                />

            <EditText
                android:id="@+id/eTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:hint="@string/telefono"
                android:inputType="number"
                android:textColor="@color/red"
                android:textSize="20sp"
                android:textStyle="normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/fecha"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="italic|bold"
                />
            <DatePicker
                android:id="@+id/dFecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:datePickerMode="spinner"
                android:layout_gravity="center"
                android:calendarViewShown="false"></DatePicker>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/ciudad"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="italic|bold"

                />
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sCiudad">
            </Spinner>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/genero"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="italic|bold"
                />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rMasculino"
                android:layout_width="wrap_content"
                android:checked="true"
                android:layout_height="wrap_content"
                android:text="@string/masculino" />

            <RadioButton
                android:id="@+id/rFemenino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/femenino" />

        </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/hobbies"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="italic|bold"
                >
            </TextView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <CheckBox
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/cine"
                android:id="@+id/cCine"
                android:textColor="@color/blue"
                android:textStyle="normal|italic"
                android:textSize="15sp"
                />
            <CheckBox
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/comer"
                android:id="@+id/cComer"
                android:textColor="@color/blue"
                android:textStyle="normal|italic"
                android:textSize="15sp"
                />
            <CheckBox
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/bailar"
                android:id="@+id/cBailar"
                android:textColor="@color/blue"
                android:textStyle="normal|italic"
                android:textSize="15sp"
                />
            <CheckBox
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/leer"
                android:id="@+id/cLeer"
                android:textColor="@color/blue"
                android:textStyle="normal|italic"
                android:textSize="15sp"
                />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/bRegistrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/yellowgreen"
                android:text="@string/registrar"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold"

                />
        </LinearLayout>


        <TextView
            android:id="@+id/tInformacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/informacion"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"

            />

    </LinearLayout>


</ScrollView>



